--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 
         <p title="tooltip">and we got a paragraph too <strong>crazy</strong></p>
         <br>
-        <a href="https://www.chess.com/game/live/110827408819">chess flex cuz why not</a>
+        <a href="https://www.chess.com/game/live/110827408819" target="_blank">chess flex cuz why not</a>
         
         <hr>
 
+        <p>my lovely brother</p>
         <img src="C:\Users\bearm\OneDrive\Pictures\Screenshots 1\Screenshot 2025-09-20 111452.png" alt="alternate text" width="206" height="244">
+
+        <a href="mailto:dungaroos@hotmal.com" title="all them dungaroos">email me</a>
 
         <!-- comments w -->
     </body>
