--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <hr>
 
         <p>my lovely brother</p>
-        <img src="C:\Users\bearm\OneDrive\Pictures\Screenshots 1\Screenshot 2025-09-20 111452.png" alt="alternate text" width="206" height="244">
+        <img src="images/Screenshot 2025-09-20 111452.png" alt="alternate text" width="206" height="244">
 
         <a href="mailto:dungaroos@hotmal.com" title="all them dungaroos">email me</a>
 
