--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Webpage Title</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="안녕.png">
+        <link rel="icon" type="image/x-icon" href="/images/안녕.png">
     </head>
 
     <body>
