--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Webpage Title</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="/images/안녕.png">
+        <link rel="icon" type="image/x-icon" href="images/안녕.png">
     </head>
 
     <body>
@@ -16,7 +16,7 @@
         <hr>
 
         <p>my lovely brother</p>
-        <img src="/images/Screenshot 2025-09-20 111452.png" alt="alternate text" style="width:206px; height:244px">
+        <img src="images/Screenshot 2025-09-20 111452.png" alt="alternate text" style="width:206px; height:244px">
 
         <br>
         <a href="mailto:dungaroos@hotmal.com" title="all them dungaroos">email me</a>
