--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
         <br>
         <a href="https://www.chess.com/game/live/110827408819" target="_blank">chess flex cuz why not</a>
         
+        <button type="button" onclick="document.write(21)">9+10</button>
+
         <hr>
 
-        <p>my lovely brother</p>
+        <p id="brother">my lovely brother</p>
         <img src="images/Screenshot 2025-09-20 111452.png" alt="alternate text" style="width:206px; height:244px">
 
         <br>
         <a href="mailto:dungaroos@hotmal.com" title="all them dungaroos">email me</a>
 
         <!-- comments w -->
+    <script src="script.js"></script>
     </body>
-
 </html>
